--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-build-apk
+        path: ./**/*.apk
+
